fix: fix bugs on mobile res

--- a/RSS-CSS-Selectors/src/components/aside/aside.scss
+++ b/RSS-CSS-Selectors/src/components/aside/aside.scss
@@ -35,6 +35,7 @@ body:has(.aside-burger.burger-active) .aside {
 
 .nav__title {
   position: relative;
+  white-space: nowrap;
 
   &::before {
     content: '';
