--- a/RSS-CSS-Selectors/src/components/aside/burger.scss
+++ b/RSS-CSS-Selectors/src/components/aside/burger.scss
@@ -67,6 +67,7 @@
   right: -150%;
   width: 100%;
   height: 100vh;
+  overflow: auto;
   background-color: $burger-background-color;
   @extend %transition;
 
