--- a/RSS-CSS-Selectors/src/components/game/levels/level-8/level-8.scss
+++ b/RSS-CSS-Selectors/src/components/game/levels/level-8/level-8.scss
@@ -3,16 +3,16 @@
   top: -60%;
   left: 20%;
   display: block;
-  min-width: 4rem;
-  min-height: 4rem;
+  min-width: 5rem;
+  min-height: 5rem;
   background: url(./img/genie.webp) center no-repeat transparent;
   background-size: contain;
 }
 
 vessel {
   position: relative;
-  min-width: 4rem;
-  min-height: 4rem;
+  min-width: 5rem;
+  min-height: 5rem;
   background: url(./img/vessel.webp) center no-repeat transparent;
   background-size: contain;
 }
